[package]
name = "bradar-de"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay", rev = "7f72e42", default-features = false, features = [
    "desktop",
    "renderer_gl",
    "wayland_frontend",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "use_system_lib",
]}
calloop = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
input = "0.9"
